--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     justify-content: center;
     height: 100vh;
     display: flex;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #container {
@@ -49,7 +50,6 @@ body {
 }
 
 .button {
-    padding: 10px 20px;
     background-color: #092446;
     color: white;
     font-weight: bold;
@@ -65,17 +65,87 @@ body {
     font-size: 15px;
 }
 
+.button:hover {
+    background-color: #3b5b7f; /* Cambia el color cuando el usuario pasa el mouse */
+}
+
+.button:active {
+    background-color: #5c86b9; /* Cambia el color cuando se hace clic */
+}
+
+
 #button-container .button:nth-child(2) {
     background-color: #f31c1c;
-    /* Cambia el color de fondo del segundo botón */
     color: white;
-    /* Cambia el color del texto */
 }
+
+
+#button-container .button:nth-child(2):hover {
+    background-color: #460505;
+    transition: background-color 0.3s ease;
+    animation: blink 2s infinite;
+}
+
 
 #option-container {
     position: absolute;
-    top: 200px;
-    width: 200px;
+    top: 100px;
+    width: 300px;
     height: 200px;
+    flex-direction: column;
+    gap: 50px;
+    background-color: #e7dede;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+
+.dificult-button {
+    background-color: #092446;
+    color: #fff;
+    font-weight: bold;
+    width: 70px;
+    height: 30px;
+    gap: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.dificult-button:hover {
+    background-color: #3b5b7f; 
+}
+
+.dificult-button:active {
+    background-color: #5c86b9; 
+}
+
+#sensitivity-container{
     display: flex;
+    gap: 10px;
+}
+
+#sensitivity {
+    color: #092446;
+    font-weight: bold;
+}
+#sensitivity-slider {
+    appearance: none;
+    width: 100%; 
+    height: 10px; 
+    border-radius: 5px; 
+    outline: none; 
+}
+
+#sensitivity-value{
+    color: #092446;
+    font-weight: bold;
+}
+
+
+#dificult-container{
+    display: flex;
+    gap: 20px;
 }
