--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,8 @@ body {
 
 #option-container {
     position: absolute;
-    top: 250px;
+    top: 50%;
+    left: 50%;
     width: 300px;
     height: 200px;
     flex-direction: column;
