--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Arkanoid'; 
-    src: url('fonts/Arka_solid.ttf') format('truetype'); 
+    font-family: 'Arkanoid';
+    src: url('fonts/Arka_solid.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -15,12 +15,12 @@
 #score-container p {
     font-family: 'Arkanoid';
     margin: 5px 0;
-    font-weight: bold; 
+    font-weight: bold;
 }
 
 #score-container span {
     font-size: 22px;
-    margin-right: 10px; 
+    margin-right: 10px;
     font-family: 'Arkanoid';
 }
 
@@ -102,11 +102,11 @@ body {
 }
 
 .button:hover {
-    background-color: #3b5b7f; 
+    background-color: #3b5b7f;
 }
 
 .button:active {
-    background-color: #5c86b9; 
+    background-color: #5c86b9;
 }
 
 
@@ -127,6 +127,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
     width: 300px;
     height: 200px;
     flex-direction: column;
@@ -152,14 +153,14 @@ body {
 }
 
 .difficulty-button:hover {
-    background-color: #3b5b7f; 
+    background-color: #3b5b7f;
 }
 
 .difficulty-button:active {
-    background-color: #5c86b9; 
+    background-color: #5c86b9;
 }
 
-#sensitivity-container{
+#sensitivity-container {
     display: flex;
     gap: 10px;
 }
@@ -171,19 +172,19 @@ body {
 
 #sensitivity-slider {
     appearance: none;
-    width: 100%; 
-    height: 10px; 
-    border-radius: 5px; 
-    outline: none; 
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    outline: none;
 }
 
-#sensitivity-value{
+#sensitivity-value {
     color: #092446;
     font-weight: bold;
 }
 
 
-#dificult-container{
+#dificult-container {
     display: flex;
     gap: 20px;
 }
